# MoarPtr

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: testing.yml
include/MoarPtr/: concepts.h  extern_ptr.h  function_ptr.h  moar_ptr.h
test/: CMakeLists.txt  test_moar_ptr.cpp
